user-kubernetes/networkpolicy/allow-all-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: dev
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - {}
