user-kubernetes/networkpolicy/egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes: ["Egress"]
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.2.7/32
    ports:
    - protocol: TCP
      port: 80
#  - to:
#    - podSelector:
#        matchLabels:
#          app: myapp
#    ports:
#    - protocol: TCP
#      port: 80
